# Skylytics-Historical_Weather_Engine

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
config/: settings.yaml
docker/: app.Dockerfile  test.Dockerfile
src/: cleaning.py  config.py  data_cleaner.py  ip.py  location_resolver.py  logger.py  main.py  weather.py  weather_data_fetcher.py
tests/: test_cleaning.py  test_ip.py  test_weather.py  test_weather_fetcher.py
tests/integration/: test_data_cleaner_integration.py  test_location_resolver_integration.py  test_weather_fetcher_integration.py
tests/unit/: test_data_cleaner.py  test_location_resolver.py  test_weather_fetcher.py
